# wing

./: LICENSE  README.md
drivers/wdump/: Makefile  README  mk-config
drivers/wdump/src/: ckpt.c  ckpt.h  config.h  conn.c  conn.h  debug.c  debug.h  dump.c  dump.h  io.c  io.h  restore.c  restore.h  save.c  save.h  sys.c  sys.h  util.c  util.h  wcfs.h
fs/wcfs/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  libtool  wcfs
fs/wcfs/src/: file.c  file.h  path.c  path.h  util.c  util.h  wcfs.c  wcfs.h
fs/wlfs/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac  libtool  wlfs
fs/wlfs/include/: eval.h  mem.h  wait.h  wres.h
fs/wlfs/src/: wcom.c  wcom.h  wlfs.c  wlfs.h  wln.c  wln.h  wlnd.c  wlnd.h
fs/wlfs/src/wres/: cache.c  cache.h  ckpt.c  ckpt.h  event.c  event.h  line.c  line.h  lock.c  lock.h  mds.c  mds.h  member.c  member.h  msg.c  msg.h  page.c  page.h  path.c  path.h  prio.c  prio.h  proc.c  proc.h  record.c  record.h  redo.c  redo.h  resource.c  resource.h  rwlock.c  rwlock.h  sem.c  sem.h  shm.c  shm.h  stringio.c  stringio.h  trace.c  trace.h  (+6 more)
init/: bridge.py  container.py  init.py
kernel/arch/x86/include/asm/: pgtable.h  pgtable_types.h
kernel/arch/x86/syscall/: syscall_32.tbl
kernel/include/linux/: mm.h  sched.h  syscalls.h  wres.h  wtrans.h
kernel/ipc/: msg.c  sem.c  shm.c  util.c  util.h
kernel/kernel/: exit.c  fork.c
kernel/mm/: memory.c  mmap.c  mremap.c
lib/: db.py  default.py  iface.py  log.py  net.py  pack.py  path.py  privacy.py  stream.py  wctrl.py  whub.py  wmd.py  wmon.py  wroute.py  wview.py
services/wctrl/: control.py  wctrld.py
services/wctrl/ctrl/: auth.py  ckpt.py  heartbeat.py  secret.py
services/wctrl/util/: wdump.py
services/whub/: auth.py  connector.py  device.py  host.py  whubd.py
services/whub/dev/: container.py  monitor.py  net.py  network.py  storage.py
services/whub/util/: bridge.py  lxc.py  mon.py  vpn.py  wofs.py  wpfs.py
services/wmd/: README  README.md  bar.py  cmd.py  com.py  gen.py  hdl.py  idx.py  mds.py  mix.py  pub.py  que.py  rec.py  reg.py  rep.py  seq.py  sim.py  srv.py  sub.py
services/wmon/: handler.py  trigger.py  wmond.py
services/wmon/hdlr/: crash.py
services/wmon/trig/: heartbeat.py
services/wroute/: poller.py  ppp.py  queue.py  task.py  worker.py  wrouted.py
services/wroute/tsk/: auth.py
services/wview/: dialog.py  viewer.py  wviewd.py
services/wview/dlg/: acceptor.py  connector.py
services/wview/util/: ui.py
tests/mds/: bench.py  cfg
tests/shm/hotspot/: Makefile  barrier.h  hotspot  hotspot.c  hotspot.h  lock.h
tests/shm/me/: barrier.c  lock.c  me  me.c  me.h
tests/shm/rap/: rap  rap.c  rap.h
tests/shm/splash2/codes/null_macros/: SYSVIPC
